fix overflowing

--- a/src/components/assets/Editor.css
+++ b/src/components/assets/Editor.css
@@ -20,6 +20,7 @@
   .editor-col-head {
     padding: 8px 16px;
     position: static;
+    width: 100vw;
   }
 }
 
