--- a/src/components/assets/drawer.css
+++ b/src/components/assets/drawer.css
@@ -219,7 +219,7 @@
 }
 
 .attribution {
-  position: fixed;
+  position: absolute;
   bottom: 1rem;
   left: 1rem;
   color: #fff;
